# go-http-perf

./: .gitignore  .golangci.yml  README.md  cov.sh  doc.sh  go.mod  go.sum  perf.go
buffer/: buf2dst.go  src2buf.go
cmd/buffer/dummy/: main.go
cmd/example/all-in-one/dummy-target-server/: main.go
cmd/example/all-in-one/redis2req2target/: main.go
cmd/example/all-in-one/redis2time2ws2redis/: main.go  time2wasm2json.wasm
cmd/example/all-in-one/redis2time2ws2redis/public/pub/: index.html  index.mjs  time2wasm2json.wasm
cmd/example/all-in-one/time2redis/: main.go  ptime.go
cmd/example/all-in-one/time2wasm2json/: Cargo.toml  build.sh  test.mjs  time2wasm2json.wasm
cmd/example/all-in-one/time2wasm2json/src/: lib.rs
cmd/server/request-generator/: README.md  bench.sh  main.go  proto2json.py  request_pb2.py  rs_time2json.wasm  test.sh
docs/: README.md  fast.worker.js  index.css  index.html  index.mjs  normal.worker.js  rs_sin_fast.wasm
http-perf/: request.go
http-perf/request/: request.pb.go  request.proto
http-perf/wasm/: wasm2req.go
http-perf/wasm/examples/math/trigonometry/rs-sin-fast/: Cargo.toml  README.md  fast.worker.js  mypy.ini  normal.worker.js  rs_sin_fast.wasm  rs_sin_fast.wast  (+2 more)
http-perf/wasm/examples/post/json/rs-time2json/: Cargo.toml  build.rs  request_pb2.py  rs_time2json.wasm  test.py
http-perf/wasm/examples/post/json/rs-time2json/src/: lib.rs  request.proto
http-perf/wasm/wasmtime/: wt2req.go
queue/: editor.go  header.go  length.go  limit.go  pop.go  push.go  q.go  request.go  seed.go  url.go
util/: compose.go  cond.go  curry.go
(+8 files in other folders)
