[package]
name = "rs-time2json"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.prost]
version = "0.11.9"
default-features = false
features = [
	"prost-derive",
]

[dependencies.prost-types]
version = "0.11.9"
default-features = false

[dependencies.bytes]
version = "1.4.0"
default-features = false
features = [
	"serde",
]

[build-dependencies.prost-build]
version = "0.11.9"
